# auditpilot

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md
backend/: pyproject.toml
backend/app/: main.py  remediation.py
backend/app/frameworks/: coverage.py  coverage_service.py  gap_service.py  gaps.py  iso27001.py  mapper.py  mapping.py  models.py  registry.py  scoring.py  scoring_service.py  service.py
backend/app/remediation/: models.py  service.py
backend/app/routes/: evidence.py  frameworks.py  remediation.py  upload.py
backend/app/services/: document_classifier.py  document_parser.py  evidence_models.py  evidence_repository.py  evidence_service.py  evidence_status_engine.py  evidence_summary.py  metadata_extractor.py
backend/app/validators/: engine.py  models.py  registry.py  risk_register.py  runner.py  severity.py
backend/app/validators/rules/: base.py  duplicate_risk_id.py  duplicate_rows.py  empty_risk_id.py  empty_rows.py  invalid_impact.py  invalid_likelihood.py  invalid_review_date.py  (+7 more)
backend/tests/: conftest.py  test_control_mapper.py  test_coverage_service.py  test_document_classifier.py  test_document_parser.py  test_evidence_repository_api.py  test_evidence_service.py  test_evidence_status_engine.py  test_evidence_summary.py  test_evidence_upload.py  test_framework_api.py  test_framework_registry.py  test_framework_service.py  test_gap_service.py  test_health.py  test_metadata_extractor.py  test_remediation_api.py  test_remediation_service.py  test_risk_register_upload.py  test_scoring_service.py  test_validation_engine.py
