[project]
name = "backend"
version = "0.1.0"
description = "AuditPilot FastAPI backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "python-multipart>=0.0.32",
    "uvicorn[standard]",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=2.3.0",
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
